# grpcTutorial

./: Dockerfile  README.md  main.cpp  op-interface.pb.h  op-interface.proto
client/: op_interface_pb2.py  op_interface_pb2_grpc.py
protos/: op-interface.proto
server/: CMakeLists.txt  Dockerfile  OrienteeringProblemServiceImpl.cpp  OrienteeringProblemServiceImpl.h  main.cpp  op-interface.grpc.pb.cc  op-interface.grpc.pb.h  op-interface.pb.cc  op-interface.pb.h
